@@ -16,7 +16,7 @@
 
 	<developers>
 		<developer>
-			<email>contact@andygibson.net</email>
+			<email>andy@fluttercode.com</email>
 			<id>agibson</id>
 			<name>Andy Gibson</name>
 			<organization>fluttercode</organization>
